other/add-env-vars-from-cm/.chainsaw-test/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: pod01-01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: pod01-02
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: pod02-01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: pod02-02
    image: ghcr.io/kyverno/test-busybox:1.35
