other/add-env-vars-from-cm/.chainsaw-test/podcontroller-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: pod01-01
        image: busybox:1.35
      - name: pod01-02
        image: busybox:1.35
