other/add-env-vars-from-cm/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-env-vars-from-cm
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
